--- a/main/django-app/novnc-proxy-django-master/templates/novnc/vnc.html
+++ b/main/django-app/novnc-proxy-django-master/templates/novnc/vnc.html
@@ -79,7 +79,7 @@
 
             <div class="noVNC_scroll">
 
-            <h1 class="noVNC_logo" translate="no"><span>no</span><br>VNC</h1>
+            <h1 class="noVNC_logo" translate="no"><img alt="Forensic VM" src="{% static 'novnc/' %}images/screen_57x57.png"></h1>
 
             <!-- Drag/Pan the viewport -->
             <input type="image" alt="Drag" src="{% static 'novnc/' %}app/images/drag.svg"
@@ -266,7 +266,9 @@
     <!-- Connect button -->
     <div class="noVNC_center">
         <div id="noVNC_connect_dlg">
-            <div class="noVNC_logo" translate="no"><span>no</span>VNC</div>
+            <div class="noVNC_logo" translate="no">
+			<img alt="Forensic VM" src="{% static 'novnc/' %}images/ForensicVM.png">
+			</div>
             <div id="noVNC_connect_button"><div>
                 <img alt="" src="{% static 'novnc/' %}app/images/connect.svg"> Connect
             </div></div>
