--- a/main/django-app/novnc-proxy-django-master/templates/novnc/vnc.html
+++ b/main/django-app/novnc-proxy-django-master/templates/novnc/vnc.html
@@ -14,7 +14,7 @@
     or the fragment:
         http://example.com/#host=HOST&port=PORT&encrypt=1
     -->
-    <title>noVNC</title>
+    <title>ForensicVM</title>
 
     <meta charset="utf-8">
 
@@ -79,7 +79,7 @@
 
             <div class="noVNC_scroll">
 
-            <h1 class="noVNC_logo" translate="no"><img alt="Forensic VM" src="{% static 'novnc/' %}images/screen_57x57.png"></h1>
+            <h1 class="noVNC_logo" translate="no"> </h1>
 
             <!-- Drag/Pan the viewport -->
             <input type="image" alt="Drag" src="{% static 'novnc/' %}app/images/drag.svg"
