--- a/main/django-app/templates/registration/login.html
+++ b/main/django-app/templates/registration/login.html
@@ -1,3 +1,6 @@
+{% load static %}
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,14 +9,15 @@
 </head>
 <body>
 <div class="w3-container w3-center">
-    <h2>Login</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button class="w3-button w3-blue" type="submit">Login</button>
-    </form>
-    <p>Don't have an account? <a href="{% url 'register' %}">Register</a></p>
-</div>
+  <div class="w3-card-4 w3-left w3-display-middle">      
+      <img src="{% static 'novnc/images/ForensicVM.png' %}" alt="ForensicVM">
+      <form method="post">
+          {% csrf_token %}
+          {{ form.as_p }}
+          <button class="w3-button w3-block w3-dark-gray" type="submit">Login</button>
+      </form>
+  </div>
+  </div>
 </body>
 </html>
 
