--- a/main/django-app/templates/registration/login.html
+++ b/main/django-app/templates/registration/login.html
@@ -6,10 +6,18 @@
 <head>
     <title>Login</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <style>
+    body {
+       background-image: url('{% static 'novnc/images/anisur-rahman-K2b7UDed6uQ-unsplash.jpg' %}');
+       background-repeat: no-repeat;
+       background-attachment: fixed;
+       background-size: cover;
+    }
+</style>
 </head>
 <body>
 <div class="w3-container w3-center">
-  <div class="w3-card-4 w3-left w3-display-middle">      
+  <div class="w3-card-4 w3-left w3-display-middle w3-white w3-round-xlarge">      
       <img src="{% static 'novnc/images/ForensicVM.png' %}" alt="ForensicVM">
       <form method="post">
           {% csrf_token %}
