--- a/main/django-app/templates/registration/logged_out.html
+++ b/main/django-app/templates/registration/logged_out.html
@@ -1,13 +1,26 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Logged Out</title>
+    <title>Logged out</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <style>
+    body {
+       background-image: url('{% static 'novnc/images/anisur-rahman-K2b7UDed6uQ-unsplash.jpg' %}');
+       background-repeat: no-repeat;
+       background-attachment: fixed;
+       background-size: cover;
+    }
+</style>
 </head>
 <body>
 <div class="w3-container w3-center">
+  <div class="w3-card-4 w3-left w3-display-middle w3-white w3-round-xlarge">      
+      <img src="{% static 'novnc/images/ForensicVM.png' %}" alt="ForensicVM">
     <h2>You have been logged out</h2>
     <p><a href="{% url 'login' %}">Login again</a></p>
+  </div>
 </div>
 </body>
 </html>
