Logos in login and logout page

--- a/main/django-app/templates/registration/login.html
+++ b/main/django-app/templates/registration/login.html
@@ -19,7 +19,7 @@
 <div class="w3-container w3-center">
   <div class="w3-card-4 w3-left w3-display-middle w3-white w3-round-xlarge">      
       <p></p>
-      <img src="{% static 'novnc/images/ForensicVM.png' %}" alt="ForensicVM">
+      <img src="{% static 'novnc/images/forensicVMClient-square.png' %}" alt="ForensicVM">
 
        <form method="post">
             {% csrf_token %}
