--- a/main/django-app/templates/registration/login.html
+++ b/main/django-app/templates/registration/login.html
@@ -17,16 +17,19 @@
 </head>
 <body>
 <div class="w3-container w3-center">
-  <div class="w3-card-4 w3-left w3-display-middle w3-white w3-round-xlarge">      
-      <p></p>
+  <div class="w3-card-4 w3-left w3-display-middle w3-dark-gray w3-round-xlarge">      
+      <br>
       <img src="{% static 'novnc/images/forensicVMClient-square.png' %}" alt="ForensicVM">
-
+       <div class="w3-white">      
        <form method="post">
+            <br>
             {% csrf_token %}
             {{ form.as_p }}
             <input type="hidden" name="next" value="{{ next }}">
           <button class="w3-button w3-block w3-dark-gray" type="submit">Login</button>
-      </form>
+      </form>      
+      </div>
+      <p class="w3-dark-gray"></p>
   </div>
   </div>
 </body>
