--- a/main/django-app/templates/novnc/vnc.html
+++ b/main/django-app/templates/novnc/vnc.html
@@ -2,20 +2,129 @@
 <!DOCTYPE html>
 <html lang="pt_PT" class="noVNC_loading">
 <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script>
+        function getCookie(name) {
+            let cookieValue = null;
+            if (document.cookie && document.cookie !== '') {
+                const cookies = document.cookie.split(';');
+                for (let i = 0; i < cookies.length; i++) {
+                    const cookie = cookies[i].trim();
+                    // Does this cookie string begin with the name we want?
+                    if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                        break;
+                    }
+                }
+            }
+            return cookieValue;
+        }
+
+        function getParameterByName(name, url) {
+            if (!url) url = window.location.href;
+            name = name.replace(/[\[\]]/g, '\\$&');
+            var regex = new RegExp('[?&]' + name + '(=([^&#]*)|&|#|$)'),
+                results = regex.exec(url);
+            if (!results) return null;
+            if (!results[2]) return '';
+            return decodeURIComponent(results[2].replace(/\+/g, ' '));
+        }
+
+
+        function startVM() {
+            const uuid = getParameterByName('uuid');
+            if (uuid) {
+                fetch('/api/start-vm/' + uuid + '/', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'X-CSRFToken': getCookie('csrftoken') 
+                    },
+                    credentials: 'include'
+                })
+                .then(response => response.json())
+                .then(data => {
+                    console.log(data);
+                })
+                .catch((error) => {
+                    console.error('Error:', error);
+                });
+            }
+        }
+
+
+       function stopVM() {
+            const uuid = getParameterByName('uuid');
+            if (uuid) {
+                fetch('/api/stop-vm/' + uuid + '/', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'X-CSRFToken': getCookie('csrftoken')
+                    },
+                    credentials: 'include'
+                })
+                .then(response => response.json())
+                .then(data => {
+                    console.log(data);
+                })
+                .catch((error) => {
+                    console.error('Error:', error);
+                });
+            }
+        }
+
+       function resetVM() {
+            const uuid = getParameterByName('uuid');
+            if (uuid) {
+                fetch('/api/reset-vm/' + uuid + '/', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'X-CSRFToken': getCookie('csrftoken')
+                    },
+                    credentials: 'include'
+                })
+                .then(response => response.json())
+                .then(data => {
+                    console.log(data);
+                })
+                .catch((error) => {
+                    console.error('Error:', error);
+                });
+            }
+        }
+
+       function shutdownVM() {
+            const uuid = getParameterByName('uuid');
+            if (uuid) {
+                fetch('/api/shutdown-vm/' + uuid + '/', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'X-CSRFToken': getCookie('csrftoken')
+                    },
+                    credentials: 'include'
+                })
+                .then(response => response.json())
+                .then(data => {
+                    console.log(data);
+                })
+                .catch((error) => {
+                    console.error('Error:', error);
+                });
+            }
+        }
+
+    </script>
 
     <!--
-    noVNC example: simple example using default UI
-    Copyright (C) 2019 The noVNC Authors
-    noVNC is licensed under the MPL 2.0 (see LICENSE.txt)
-    This file is licensed under the 2-Clause BSD license (see LICENSE.txt).
-
     Connect parameters are provided in query string:
         http://example.com/?host=HOST&port=PORT&encrypt=1
     or the fragment:
         http://example.com/#host=HOST&port=PORT&encrypt=1
     -->
     <title>ForensicVM</title>
-
     <meta charset="utf-8">
     
 
@@ -243,15 +352,15 @@
 			
             <input type="image" alt="Shutdown/Reboot" src="{% static 'novnc/' %}app/images/power.svg"
                 id="noVNC_power_button" class="noVNC_button"
-                title="Shutdown/Reboot..." style="display: none;">
+                title="Shutdown/Reboot...">
             <div class="noVNC_vcenter">
-            <div id="noVNC_power" class="noVNC_panel" style="display: none;">
+            <div id="noVNC_power" class="noVNC_panel">
                 <div class="noVNC_heading" style="display: none;">
                     <img alt="" src="{% static 'novnc/' %}app/images/power.svg" style="display: none;"> Power
                 </div>				
-                <input type="button" id="noVNC_shutdown_button" value="Shutdown" onclick="shutdown()" style="display: none;">
-                <input type="button" id="noVNC_reboot_button" value="Reboot" onclick="reboot()" style="display: none;">
-                <input type="button" id="noVNC_reset_button" value="Reset" onclick="reset()" style="display: none;">                                				
+                <input type="button" id="noVNC_shutdown_button" value="Shutdown" onclick="shutdownVM()">
+                <input type="button" id="noVNC_reboot_button" value="Stop" onclick="stopVM()">
+                <input type="button" id="noVNC_reset_button" value="Reset" onclick="resetVM()">                                				
             </div>
             </div>
             
@@ -280,6 +389,8 @@
             <div id="noVNC_connect_button"><div>
                 <img alt="" src="{% static 'novnc/' %}app/images/connect.svg"> Connect
             </div></div>
+         <!-- Test start button -->
+        <input type="button" value="Start" onclick="startVM()">
         </div>
     </div>
 
