Reload page on error. Authentication safethy

--- a/main/django-app/templates/novnc/vnc.html
+++ b/main/django-app/templates/novnc/vnc.html
@@ -181,7 +181,7 @@ function screenshotVM() {
         })
         .catch((error) => {
             console.error('Error:', error);
-            //location.reload();
+            location.reload();
         });
     }
 }
