--- a/main/django-app/templates/novnc/vnc.html
+++ b/main/django-app/templates/novnc/vnc.html
@@ -50,7 +50,7 @@
                     return response.json();
                 })
                 .then(data => {
-                    showAlert('Start sent...')
+                    showAlert('Start sent...','w3-blue')
                     console.log(data);
                 })
                 .catch((error) => {
@@ -80,7 +80,7 @@
                     return response.json();
                 })
                 .then(data => {
-                    showAlert('Stop sent...')
+                    showAlert('Stop sent...','w3-orange')
                     console.log(data);
                 })
                 .catch((error) => {
@@ -140,7 +140,7 @@
                 })
                 .then(data => {
                     console.log(data);
-                    showAlert('Shutdown sent...')
+                    showAlert('Shutdown sent...','w3-blue')
                 })
                 .catch((error) => {
                     console.error('Error:', error);
@@ -210,7 +210,7 @@ function screenshotVM() {
       // Calculate the top position for the alert
       var alertHeight = alertElement.offsetHeight;
       var alertCount = alertContainer.getElementsByClassName('alert').length;
-      var alertTop = (alertCount - 1) * (alertHeight+2);
+      var alertTop = (alertCount - 1) * (alertHeight+2)-20;
 
       // Set the top position dynamically
       alertElement.style.top = alertTop + 'px';
