Changed reset message to orange

--- a/main/django-app/templates/novnc/vnc.html
+++ b/main/django-app/templates/novnc/vnc.html
@@ -109,7 +109,7 @@
                     return response.json();
                 })
                 .then(data => {
-                    showAlert('Reset sent...')
+                    showAlert('Reset sent...','w3-orange')
                     console.log(data);
                 })
                 .catch((error) => {
