--- a/main/django-app/templates/main.html
+++ b/main/django-app/templates/main.html
@@ -1,8 +1,29 @@
 <!-- templates/main.html -->
+{% load static %}
 
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- Icons (see app/images/icons/Makefile for what the sizes are for) -->
+    <link rel="icon" sizes="16x16" type="image/png" href="{% static 'novnc/' %}app/images/icons/ForensicVM-16x16.png">
+    <link rel="icon" sizes="24x24" type="image/png" href="{% static 'novnc/' %}app/images/icons/ForensicVM-24x24.png">
+    <link rel="icon" sizes="32x32" type="image/png" href="{% static 'novnc/' %}app/images/icons/ForensicVM-32x32.png">
+    <link rel="icon" sizes="48x48" type="image/png" href="{% static 'novnc/' %}app/images/icons/ForensicVM-48x48.png">
+    <link rel="icon" sizes="60x60" type="image/png" href="{% static 'novnc/' %}app/images/icons/ForensicVM-60x60.png">
+    <link rel="icon" sizes="64x64" type="image/png" href="{% static 'novnc/' %}app/images/icons/ForensicVM-64x64.png">
+    <link rel="icon" sizes="72x72" type="image/png" href="{% static 'novnc/' %}app/images/icons/ForensicVM-72x72.png">
+    <link rel="icon" sizes="76x76" type="image/png" href="{% static 'novnc/' %}app/images/icons/ForensicVM-76x76.png">
+    <link rel="icon" sizes="96x96" type="image/png" href="{% static 'novnc/' %}app/images/icons/ForensicVM-96x96.png">
+    <link rel="icon" sizes="120x120" type="image/png" href="{% static 'novnc/' %}app/images/icons/ForensicVM-120x120.png">
+    <link rel="icon" sizes="144x144" type="image/png" href="{% static 'novnc/' %}app/images/icons/ForensicVM-144x144.png">
+    <link rel="icon" sizes="152x152" type="image/png" href="{% static 'novnc/' %}app/images/icons/ForensicVM-152x152.png">
+    <link rel="icon" sizes="192x192" type="image/png" href="{% static 'novnc/' %}app/images/icons/ForensicVM-192x192.png">
+    <!-- Firefox currently mishandles SVG, see #1419039
+    <link rel="icon" sizes="any" type="image/svg+xml" href="{% static 'novnc/' %}app/images/icons/novnc-icon.svg">
+    -->
+    <!-- Repeated last so that legacy handling will pick this -->
+    <link rel="icon" sizes="16x16" type="image/png" href="{% static 'novnc/' %}app/images/icons/ForensicVM-16x16.png">
+
   {% block header %}{% endblock %}
   <script>
     function showAlert(message, color = 'w3-green') {
@@ -60,7 +81,24 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Playfair Display";
   letter-spacing: 2px;
 }
-</style>
+      .alert {
+        opacity: 0;
+        transition: opacity 0.3s;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: 9999;
+     }
+
+     .alert.show {
+       opacity: 1;
+    }
+
+    .alert-message {
+      font-size: 14px; /* Adjust the text size as desired */
+    }
+  </style>
 </head>
 <body>
 <!-- Navbar (sit on top) -->
