--- a/main/django-app/templates/novnc/vnc.html
+++ b/main/django-app/templates/novnc/vnc.html
@@ -179,10 +179,18 @@ function screenshotVM() {
 }
 
 
-     </script>
+function enableNetwork() {
+     showAlert('Enable network sent', 'w3-orange');
+     document.getElementById('id01').style.display='none';
+}
 
-<script>
-    function showAlert(message, color = 'w3-green') {
+function disableNetwork() {
+     showAlert('Disable network sent', 'w3-teal')
+     document.getElementById('id01').style.display='none';
+}
+
+
+function showAlert(message, color = 'w3-green') {
       var alertContainer = document.getElementById('alertContainer');
       var alertElement = document.createElement('div');
       alertElement.classList.add('alert');
@@ -302,9 +310,41 @@ function screenshotVM() {
 </head>
 
 <body>
-  <div id="alertContainer"></div>
+<div id="alertContainer"></div>
 
-  </div>   <div id="noVNC_fallback_error" class="noVNC_center">
+<div id="id01" class="w3-modal w3-animate-top w3-animate-opacity w3-round-large">
+    <div class="w3-modal-content">
+         <div class="w3-card-4">
+
+           <span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-display-topright">&times;</span>
+
+           <header class="w3-container w3-blue">
+                  <h1>Network control</h1>
+           </header>
+
+           <div class="w3-container">
+                <p>After activating the network, all network trafic will be recorded. When you stop the network interface, the recording stops.</p>
+                <p>Warning: This network interface was a basic firewall. It will avoid network trafic to reach your local network. But, because
+                   of is nature, it is possible for a malicious actor(hacker) to use this network to get your external ip address, and is possible to make a local network scan using TCP Sync. So
+                   please use it at your own risk. </p>
+           </div>
+
+          <footer class="w3-container w3-blue">
+               <div class="w3-container w3-cell-middle w3-center">
+                <br/>
+                <button  style="background: unset;" class="w3-button w3-round-large w3-red w3-large" onclick="enableNetwork()">Enable network (caution!)</button>   
+                <button  style="background: unset;" class="w3-button w3-round-large w3-green w3-large" onClick="disableNetwork()">Disable network</button>
+                <br/>
+                <br/>
+               </div>
+
+         </footer>
+
+        </div>
+    </div>
+</div>
+
+</div> <div id="noVNC_fallback_error" class="noVNC_center">
         <div>
             <div>noVNC encountered an error:</div>
             <br>
@@ -384,6 +424,8 @@ function screenshotVM() {
             <!-- Screenshot Photo camera icon -->
             <i id="cameraIcon" class="material-icons w3-text-white noVNC_button" onclick="screenshotVM()">photo_camera</i>
 
+            <!-- Network control icon -->
+            <i id="networkIcon" class="material-icons w3-text-white noVNC_button" onclick="document.getElementById('id01').style.display='block'">lan</i>
 
             <!-- Settings -->
             <input type="image" alt="Settings" src="{% static 'novnc/' %}app/images/settings.svg"
